<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.cliqz.browser.widget.AutocompleteEditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="#11FFFFFF"
        android:drawableRight="@drawable/ic_action_delete"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="left|center_vertical"
        android:hint="@string/search_hint"
        android:imeOptions="actionGo"
        android:imeActionLabel="@string/go"
        android:inputType="textUri"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_text"
        android:textCursorDrawable="@null"/>

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_action_delete"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:background="#11FFFFFF"/>

</FrameLayout>