<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_action_cliqz_up"
        android:id="@+id/menu_history" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:singleLine="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/primary_color_dark"
        android:textColorHint="@color/hint_text" />

</LinearLayout>